# backend

./: .env.EXAMPLE  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  start.sh
.github/workflows/: build-backend.yml  build-server.yml  build.yml  docker-deploy-image.yml  sync-proto.yml
config/k8s/: server.yaml
config/terraform/: ec2.tf
db/: Cargo.toml  reset_db.sh
db/migrations/2024-06-13-023454_spans-and-tables/: down.sql  up.sql
db/migrations/2024-08-25-023654_test-version/: up.sql
db/migrations/2024-09-05-032509_eval/: down.sql  up.sql
db/src/: lib.rs  schema.rs
db/src/models/: eval.rs  eval_result.rs  eval_version.rs  mod.rs  prompt_version.rs  repository.rs  span.rs  test_registration.rs  test_version.rs
db/src/models/base/: diff.rs  mod.rs  model.rs
db/src/sync/: mod.rs
exec/: Cargo.toml
exec/src/: main.rs
kafka/: Cargo.toml
kafka/src/: kafka_client.rs
kafka/src/example/: run_consumer.rs  run_producer.rs
macros/src/: lib.rs
migrations/2024-05-26-165515_create_spans/: down.sql  up.sql
migrations/2024-05-26-171417_create_span_contexts/: down.sql  up.sql
migrations/2024-06-13-023454_spans-and-tables/: down.sql
proto/: Cargo.toml  buf.gen.yaml  buf.yaml  build.rs
proto/src/: code_execution.proto  lib.rs  ollyLLM.proto  run_server.rs  server.rs
proto/src/definitions/: buf.yaml  ollyllm.proto  span_creation.proto  test_execution.proto
proto/src/definitions/ellmo/v1/: eval.proto  polay.proto  span.proto  test.proto
proto/src/definitions/ollyllm/v1/: eval.proto  ollyllm.proto  span.proto  span_creation.proto  test.proto
proto/src/definitions/polay/v1/: eval.proto  polay.proto  span.proto  test.proto
proto/src/examples/: dummy_client.rs  dummy_server.rs  mod.rs  run_client.rs
server/: .env.EXAMPLE  Cargo.toml  Dockerfile  README.md
server/migrations/2024-06-13-023454_spans-and-tables/: up.sql
server/migrations/2024-08-25-023654_test-version/: down.sql  up.sql
server/src/: lib.rs  main.rs  queue.rs  state.rs  tracing.rs
server/src/db/: schema.rs
server/src/db/models/: mod.rs  repository.rs  span.rs  test_registration.rs  test_version.rs
server/src/eval/: mod.rs
server/src/exec/: README.md  ast.rs  mod.rs
server/src/exec/js/: module_loader.rs
server/src/register/: mod.rs
server/src/rpc/: eval.rs  mod.rs
src/: lib.rs  main.rs  models.rs  queue.rs  schema.rs
src/db/: schema.rs
src/db/models/: mod.rs  repository.rs  span.rs  span_context.rs
src/exec/js/: mod.rs
src/models/: span.rs  span_context.rs
src/register/: mod.rs
sync/: Cargo.toml  Dockerfile
sync/src/: lib.rs  main.rs
