[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
ellmo_sync = { package = "sync", path = "../sync" }

chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.3", features = ["postgres", "chrono", "serde_json", "uuid"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
uuid = { version = "1.8.0", features = ["v4"] }
thiserror = "1.0.64"
reqwest = { version = "0.12.7", features = ["json"] }

