[package]
name = "exec"
version = "0.1.0"
edition = "2021"

[dependencies]
olly_db = { package = "db", path = "../db" }

aws-config = "1.5.5"
aws-sdk-s3 = "1.47.0"
axum = "0.7.5"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = "1.10.0"
diesel = { version = "2.2.0", features = ["postgres", "chrono", "serde_json", "uuid"] }
url = "2.5.2"
aws-smithy-types = "1.2.4"
flate2 = "1.0.33"
tar = "0.4.41"
serde_json = "1.0.127"
aws-smithy-runtime-api = "1.7.2"

