[package]
name = "kafka"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run-kafka-producer"
path = "src/example/run_producer.rs"

[[bin]]
name = "run-kafka-consumer"
path = "src/example/run_consumer.rs"

[dependencies]
futures = "0.3.30"
rdkafka = "0.36.2"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
