[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run-server"
path = "src/run_server.rs"

[[bin]]
name = "run-example-client"
path = "src/examples/run_client.rs"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.0"

[build-dependencies]
tonic-build = "0.12"
