[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tonic = { version= "0.12.0", features = ["prost"] }
prost-types = "0.13"
prost = "0.13"
protoc-gen-tonic = "0.4.0"

[lints.clippy]
empty_docs = "allow"

