[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
# Local
ellmo_proto = { package = "proto", path = "../proto" }
ellmo_db = { package = "db", path = "../db" }

# Proto
tonic = { version = "0.12.0", features = ["prost"] }
prost-types = "0.13"

anyhow = "1.0.86"
async-trait = "0.1.80"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.47.0"
axum = "0.7.5"
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
data-url = "0.3.1"
diesel = { version = "2.2.0", features = ["postgres", "chrono", "serde_json", "uuid"] }
dotenvy = "0.15"
lazy_static = "1.4.0"
reqwest = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.8.0", features = ["v4"] }

