[package]
name = "sync"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.128"
serde = { version = "1.0.209", features = ["derive"] }
axum = { version = "0.7.5", features = ["ws"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
tokio = { version = "1.4.0", features = ["rt-multi-thread"] }

axum-extra = "0.9.4"
headers = "0.4.0"
futures-util = "0.3.30"
